bye bye carpeta archivos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <p> Si quiere iniciar el examen pulse: </p>
 <form>
-<input type="button" value=" Acceso al examen" onClick="location='/archivos/examen/examen.php'">
+<input type="button" value=" Acceso al examen" onClick="location='/examen/examen.php'">
 
 </form>
 </body>
