--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html>
 <head>
 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/> 	 	
-
 <title>  Bienvenido a nginx Javi </title>
 <style>
-    body {
+    body
+    {
         width: 35em;
         margin: 0 auto;
         font-family: Tahoma, Verdana, Arial, sans-serif;
     }
-
 </style>
 </head>
+
+
+
 <body>
 <h1> Bienvenido Javi</h1>
 
 
-<p> Si quiere iniciar el examen pulse: </p>
+<p> Si quieres iniciar el examen pulsa el botón de abajo: </p>
 <form>
 <input type="button" value=" Acceso al examen" onClick="location='/examen/examen.php'">
 
